# cv-roadmap

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/src/: example.cpp
docs/: contributing.md  index.md
docs/modules/: calibration.md  features.md  filters.md  geometry.md  optical_flow.md  segmentation.md  tracking.md
docs/usage/: cli.md  python.md
src/cv_toolkit/: __init__.py  calibration.py  cli.py  features.py  filters.py  geometry.py  optical_flow.py  segmentation.py  tracking.py  utils.py
src/iptk/: __init__.py  calibration.py  cli.py  features.py  filters.py  geometry.py  optical_flow.py  segmentation.py  tracking.py  utils.py
tests/: test_features.py  test_filters.py
