[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "cv-roadmap"
version = "0.1.0"
description = "Classic computer vision roadmap."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Sara Hatami"}]
dependencies = [
  "opencv-python>=4.9.0.80",
  "numpy>=1.26",
  "typer>=0.12",
  "rich>=13.7",
  "pillow>=10.3",
]

[project.urls]
Homepage = "https://github.com/saravich/cv-roadmap"

[project.scripts]
iptk = "iptk.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5.0",
  "black>=24.4",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iptk"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B","BLE","C4","SIM","I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["iptk"]

[tool.mypy]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["docs/"]
disable_error_code = ["misc", "type-arg", "attr-defined", "no-any-return", "call-overload", "arg-type", "return-value", "assignment", "union-attr", "has-type", "type-var"]

[tool.pytest.ini_options]
addopts = "-q --cov=iptk --cov-report=term-missing"
pythonpath = ["src"]
